[package]
name = "bgit"
version = "0.1.0"
edition = "2021"
description = "Commit specific files directly to target branches without switching."
license = "MIT"
repository = "https://github.com/andyjsbell/bgit"
homepage = "https://github.com/yourusername/bgit"
readme = "README.md"
keywords = ["git", "cli", "branch", "commit", "automation"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Andy Bell <andyjsbell@gmail.com>"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
git2 = "0.20.2"
camino = "1"
pathdiff = "0.2.3"
